ProjetCompil/Verif/Test/fail/affArrayBorne2.cas
program
   A : array [1..5] of integer;
   B : array [1..4] of integer;
begin
   A := B;
end.